# thinkhdd

./: .gitignore  .travis.yml  Makefile.am  README.md  configure.ac
debian/: README  README.Debian  README.source  changelog  control  copyright  files  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  thinkhdd.cron.d.ex  thinkhdd.default.ex  thinkhdd.doc-base.EX  thinkhdd.service  watch.ex
src/: Makefile.am  hdd_led.cc
